--- a/python/index.html
+++ b/python/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dog-School Connect</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/logo.png">
 <script type="importmap">
 {
   "imports": {
@@ -24,18 +25,18 @@
 <body>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
-                    .then(registration => {
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    })
-                    .catch(error => {
-                        console.log('ServiceWorker registration failed: ', error);
-                    });
-            });
-        }
-    </script>
+<!--    <script>-->
+<!--        if ('serviceWorker' in navigator) {-->
+<!--            window.addEventListener('load', () => {-->
+<!--                navigator.serviceWorker.register('/service-worker.js')-->
+<!--                    .then(registration => {-->
+<!--                        console.log('ServiceWorker registration successful with scope: ', registration.scope);-->
+<!--                    })-->
+<!--                    .catch(error => {-->
+<!--                        console.log('ServiceWorker registration failed: ', error);-->
+<!--                    });-->
+<!--            });-->
+<!--        }-->
+<!--    </script>-->
 </body>
 </html>
